# OS_IHW1

./: CMakeLists.txt  README.md  common.c  common.h
10/: io_worker.c  logic_worker.c  message_queue.c  message_queue.h
4/: main.c
5/: main.c
6/: main.c
7/: main.c
8/: io_worker.c  logic_worker.c
9/: io_worker.c  logic_worker.c
inputs/: 1.txt  2.txt  3.txt  4.txt  5.txt
